syntax = "proto3";

package scheduler;

option go_package = "mentipedia/go-backend/signup/email/generated"; 

message SignupConfirmationEmailRequest {
    string email = 1;
    // When the email will be sent, in seconds since Unix epoch
    uint64 deadline_timestamp_seconds = 2;
}

message EmptyMsg { }

// This service will send an email at the specified time containing a secret signup link
service SignupConfirmationEmailService {
    
    // This process is async by definition, there's no confirmation for when the email is eventually sent (if it is ever sent).
    rpc RegisterSignupConfirmationEmail(SignupConfirmationEmailRequest) returns(EmptyMsg);
}